fix dark mode(still scuffed)

--- a/nav.css
+++ b/nav.css
@@ -92,7 +92,7 @@ body{
         width: 100%;
         bottom: -100px;
         z-index: -10;
-        background-image: url(images/Ellipse\ 6.png);
+        background-image: url(images/header_bg.svg);
         background-position: bottom;
         background-repeat: no-repeat;
         background-size: cover;
@@ -301,10 +301,10 @@ body{
             content: "";
             position: absolute;
             width: 100%;
-            height: 300px;
+            height: 250px;
             top: 0;
             z-index: -1;
-            background-image: url(images/sect3_bg.png);
+            background-image: url(images/sect3_bg.svg);
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -534,11 +534,11 @@ body{
     left: 10px;
 }
 .dark_mode{
-    background-color: black !important;
+    background-color: #28282C !important;
 }
 .sect3_before_dark{
-    background-image: url(images/sect3_dark.png) !important;
+    background-image: url(images/sect3_bg_dark.svg) !important;
 }
 .header_before_dark{
-    background-image: url(images/header_dark.png) !important;
+    background-image: url(images/header_bg_dark.svg) !important;
 }
